fix sync icon alignment

--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -49,7 +49,7 @@
 .sync-indicator .icon
   position absolute
   left 10px
-  top: 4px
+  top: 1px
 
 #package-list
   .list-group-item
